# FunctionCalculation

./: CMakeLists.txt  main.cpp
src/: AbsFunction.cpp  AbsFunction.h  CosineFunction.cpp  CosineFunction.h  CsvWriter.cpp  CsvWriter.h  Function.h  FunctionCalculation.cpp  FunctionCalculation.h  QuadraticFunction.cpp  QuadraticFunction.h
